# arc2control

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.md  pyproject.toml  releasecheck.py  requirements.txt  run.py  setup.py  venv-pyarc2-update.py  vermng.py  w32develop.py
.github/workflows/: docs.yml  packages.yml  wheels.yml
appimage/: arc2control.appdata.xml  arc2control.desktop  build.sh  entrypoint.sh  requirements.txt
arc2control/: __init__.py  __main__.py  arc2config.py  constants.py  fwutils.py  h5utils.py  main.py  mapper.py  signals.py  version.py
arc2control/graphics/: __init__.py
arc2control/mappings/: bnc6.toml  probecard32.toml  resarray32.toml  sa-probecard32.toml  sa-standard32.toml  standard32.toml
arc2control/modules/: __init__.py  base.py
arc2control/modules/autoformer/: __init__.py  af_display_widget.py  autoformer.py
arc2control/modules/autoformer/uis/: autoformer.ui
arc2control/modules/curvetracer/: __init__.py  ct_display_widget.py  curvetracer.py
arc2control/modules/curvetracer/uis/: curvetracer.ui
arc2control/modules/retention/: __init__.py  ret_display_widget.py  retention.py
arc2control/widgets/: __init__.py  about_dialog.py  app.py  arc2connection_widget.py  collapsibletree_widget.py  common.py  crossbar_widget.py  crossbarconfig_dialog.py  datasettable_widget.py  device_explorer_widget.py  duration_widget.py  fwmanager_dialog.py  plottingoptions_widget.py  pulseops_widget.py  rampops_widget.py  readops_widget.py  resistance_widget.py  sequence_widget.py  sequencer_widget.py  statustray_widget.py
arc2control/widgets/uis/: about.ui  arc2connection.ui  crossbarconf.ui  mainwindow.ui  plottingoptions.ui  pulseops.ui  sequencer.ui
docs/: api_mapper.rst  api_modules.rst  api_signals.rst  api_storage.rst  built_in_modules.rst  conf.py  daughterboard_pinout.rst  index.rst  overview.rst  specs.rst  upload.py
pyi/: ArC2Control.spec  hook-pyarc2.py  hook-tomli.py  pyi-stub.py  win32-installer.iss  win32-version-info.tmpl
uis/: about.ui  app.ui  arc2connection.ui  fwmanager.ui  mainwindow.ui  pulseops.ui  rampops.ui  readops.ui
