[tool.poetry]
name = "arc2control"
version = "0.1.0"
description = "ArC TWO Control Panel"
readme = "README.md"
authors = ["Spyros Stathopoulos <devel@arc-instruments.co.uk>"]
repository = "https://github.com/arc-instruments/arc2control"
exclude = ["venv-pyarc2-update.py"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.18"
PyQt6 = "^6.1"
pyqtgraph = "^0.12.3"
semver = "^2.0"
requests = '^2.20'
tomli = "^1.0"
h5py = "^3.0"
pyarc2 = ">=0.1"
cryptography = ">=3.3.0"

[tool.poetry.dev-dependencies]
build = "^0.7.0"

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "PyQt6"]
build-backend = "setuptools.build_meta"

